[package]
name = "casbinerr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.16"
dotenv = "0.15"
anyhow = "1.0"
casbin = "2"
sqlx-adapter = { version = "0.4", default-features = false, features = ["postgres", "offline"] }
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "chrono", "postgres"] }
